<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="divide"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/tv_num1"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="48dp"
        android:text="@string/tv_num1"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_num2"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="52dp"
        android:text="@string/tv_num2"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_num1" />

    <EditText
        android:id="@+id/et_n1"
        android:layout_width="200dp"
        android:layout_height="73dp"
        android:layout_marginStart="28dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/et_n1"
        android:textSize="27sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_num1"
        app:layout_constraintStart_toEndOf="@+id/tv_num1"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_n2"
        android:layout_width="201dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/et_n2"
        android:textSize="27sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_num2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/tv_num2"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_answer"
        android:layout_width="229dp"
        android:layout_height="43dp"
        android:layout_marginTop="68dp"
        android:text="@string/tv_answer"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_num2" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="45dp"
        android:onClick="add"
        android:text="@string/btn_add"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_answer"
        app:strokeColor="@color/white" />

    <Button
        android:id="@+id/btn_subtract"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="45dp"
        android:onClick="subtract"
        android:text="@string/btn_subtract"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_add"
        app:layout_constraintTop_toBottomOf="@+id/tv_answer" />

    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="64dp"
        android:onClick="multiply"
        android:text="@string/btn_multiply"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add" />

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:onClick="divide"
        android:text="@string/btn_divide"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toEndOf="@+id/btn_multiply"
        app:layout_constraintTop_toBottomOf="@+id/btn_subtract" />


</androidx.constraintlayout.widget.ConstraintLayout>