<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_num1"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="48dp"
        android:text="@string/tv_num1"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_num2"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="52dp"
        android:text="@string/tv_num2"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_num1" />

    <EditText
        android:id="@+id/et_n1"
        android:layout_width="200dp"
        android:layout_height="73dp"
        android:layout_marginStart="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/et_n1"
        android:textSize="27sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_num1"
        app:layout_constraintStart_toEndOf="@+id/tv_num1" />

    <EditText
        android:id="@+id/et_n2"
        android:layout_width="201dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/et_n2"
        android:textSize="27sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_num2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/tv_num2" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="173dp"
        android:layout_height="56dp"
        android:layout_marginTop="92dp"
        android:onClick="openSecond"
        android:text="@string/btn_ok"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_num2" />
</androidx.constraintlayout.widget.ConstraintLayout>